  * Added environment variable to manually specify the oidc-agent config
    directory location
  * Added option to manually specify the used redirect port during dynamic
    client registration

  [ Gabriel Zachmann ]
  * Fixed file locations when using a custom oidcdir (through env var) and the
    path value did not have a trailing slash
  * Fixed a possible seg fault 

  [ Gabriel Zachmann ]
  * Fixed a bug that made it impossible to use the device flow

  [ Gabriel Zachmann ]
  * Removed an unnecessary client_id from post data, that caused problems with
    iam when using the device flow.

  [ Gabriel Zachmann ]
  * Changed the fundamental architecture by introducing a new proxy daemon
  * Now an account config can be updated by oidc-agent, i.e. when a provider
    issues a new refresh token
  * oidc-agent can manage the encryption password: store encrypted in memory,
    use keyring, use user provided command, or prompt the user
  * Add autoload possibility. If an application requests an access token for a
    not loaded config, it is automatically loaded, if the user allows it.
  * Add possibility that each usage of an account configuration has to be
    confirmed by the user. Can be turned of by using oidc-add -c or oidc-agent
    -c
  * Changed the oidc-agent console module flag from -c to -d
  * Fixed memory leak 
  * Changed the default port for redirect urls when using dynamic client
    registration from 2912 to 4242 
  * Added encryption for the communciation between agent and its httpserver
  * Added possibility to complete account generation with the url a user is
    redirected to
  * Added support for custom uri scheme redirect uris
  * Fixed possible seg faults
  * Fixed a seg fault when locking an agent that has a public client loaded
  * Added public clients for HBP, Elixir
  * Added support for XSession integration
  * Various bug fixes and other improvements

 -- Marcus Hardt <hardt@kit.edu>  Tue, 05 Mar 2019 15:10:15 +0100