@@ -217,5 +217,8 @@ oidc-agent (2.3.0-dev) UNRELEASED; urgency=medium
   * Added public clients for HBP, Elixir
   * Added support for XSession integration
   * Various bug fixes and other improvements
+  * Allow -u to encrypt unencrypted files
+  * When suing oidc-gen --delete the account config now does not have to be
+    loaded. The refresht oken can also be revoked if not loaded.
 
  -- Marcus Hardt <hardt@kit.edu>  Tue, 05 Mar 2019 15:10:15 +0100
